--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "symbolic-lab",
   "version": "0.1.0",
-  "license": "UNLICENSED",
+  "license": "GPL-3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
